--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: rgb(47, 209, 101);
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -131,6 +131,9 @@ button[disabled] {
 }
 
 @media (max-width: 500px) {
+  h2 {
+    text-align: center;
+  }
   .btn {
     font-size: 0.8rem;
   }
